homebridge/homebridge.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
  name: homebridge
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: homebridge
  strategy:
    # since we're using hosteNetwork: true we can't do a rolling update since the port won't be free
    type: Recreate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: homebridge
    spec:
      containers:
      - image: homebridge
        imagePullPolicy: IfNotPresent
        name: homebridge
        command: ["/init" ]
        ports:
        - containerPort: 8581
          name: homebridge-ui
          protocol: TCP
        - containerPort: 30010
          name: homebridge
          protocol: TCP
        - containerPort: 30011
          name: plugin-1
          protocol: TCP
        - containerPort: 30012
          name: plugin-2
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - name: config-volume
          mountPath: /homebridge
        - name:host-dbus
          mountPath: /var/run/dbus
        livenessProbe:
          httpGet:
            path: /
            port: 8581
        readinessProbe:
          httpGet:
            path: /
            port: 8581
        startupProbe:
          httpGet:
            path: /
            port: 8581
          failureThreshold: 30
          periodSeconds: 10
        #securityContext:
        #  privileged: true
      dnsPolicy: ClusterFirst
      hostNetwork: true # to allow plugins like sonos to be called from the outside world
      #´Don't forget to also
      # firewall-cmd --zone=public --add-port=30010-30030/tcp --permanent
      # firewall-cmd --reload
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
      - name: config-volume
        persistentVolumeClaim:
          claimName: homebridge-pv-claim
      - name:host-dbus
        hostPath:
          path: /var/run/dbus
          #type: Socket
