homebridge/homebridgeUI.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homebridge-ui
spec:
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - port: 8581
    protocol: TCP
    targetPort: 8581
  selector:
    app: homebridge
  sessionAffinity: None
  type: ClusterIP
